--- a/source/assets/scss/views/compliance.scss
+++ b/source/assets/scss/views/compliance.scss
@@ -1,6 +1,6 @@
 @import '../settings';
-@import '../modules/functions';
-@import '../modules/colors';
+@import '../mixins/functions';
+@import '../mixins/colors';
 
 // Section rules
 .compliance-masthead-section{
