--- a/source/assets/scss/views/contact-us.scss
+++ b/source/assets/scss/views/contact-us.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 @import '../settings';
-@import '../modules/functions';
-@import '../modules/colors';
+@import '../mixins/functions';
+@import '../mixins/colors';
 
 // Sections
 @media all and (max-width: $custom_breakpoint-mid){
