--- a/source/assets/scss/modules/timeline.scss
+++ b/source/assets/scss/modules/timeline.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 // @import '../../../../node_modules/foundation-sites/scss/util/_mixins.scss';
-@import '../modules/colors';
-@import '../modules/functions';
+@import '../mixins/colors';
+@import '../mixins/functions';
 
 .timeline--vertical {
     $offset: 100px; // distance of content from left edge
