--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -85,7 +85,7 @@ $font-weight-black:             900; // black
 
 // 1. Global
 // ---------
-
+$global-left: left;
 $global-font-size: 100%; // this permits user to ± font size, foundation default
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
