--- a/source/assets/scss/views/pricing.scss
+++ b/source/assets/scss/views/pricing.scss
@@ -2,8 +2,8 @@
 @import '../settings';
 @import '../../../../node_modules/foundation-sites/scss/util/_mixins.scss';
 // @import '../../../../node_modules/foundation-sites/scss/components/_callout.scss';
-@import '../modules/colors';
-@import '../modules/functions';
+@import '../mixins/colors';
+@import '../mixins/functions';
 
 $tab-border: 5px;
 .has-tip { // tooltip text styles, this needs to be scoped to this page. Maybe.
