--- a/source/assets/scss/views/services.scss
+++ b/source/assets/scss/views/services.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 @import '../settings';
-@import '../modules/functions';
+@import '../mixins/functions';
 // Section rules
 .services-mid-blue-section{
     .row{
