--- a/source/assets/scss/views/template-listing.scss
+++ b/source/assets/scss/views/template-listing.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 @import '../settings';
 @import '../../../../node_modules/foundation-sites/scss/util/_mixins.scss';
-@import '../modules/functions';
+@import '../mixins/functions';
 // Section rules
 // Solutions page section -- name the page you're creating files for since this maps to a template, and not a single view - RR
 .solutions-main-section{
