--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -73,7 +73,15 @@
             a.button {color: $color_product;}
         }
         // The new dropdown was getting written over from above
-        .dropdown {a {display: block;color: $color_deep;&:hover {color: $color_prime-alt;}}}
+        .dropdown {
+            a {
+                display: block;
+                color: $color_deep;
+                &:hover {
+                    color: $color_prime-alt;
+                }
+            }
+        }
     }
 }
 // Dropdowns
