--- a/source/partials/snippets/_header.erb
+++ b/source/partials/snippets/_header.erb
@@ -9,7 +9,7 @@
             <a href="/contact" class="expanded button button--light">Contact us</a>
         </div>
         <% data.nav_primary.nav_main.each do |m| %>
-            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+            <%= current_link_to m.title, m.url, title: m.desc %>
         <% end %>
         <div class="a dropdown-container" id="resourcesDropdown">
             <span class="selector">Resources <i class="fa fa-caret-down"></i></span>
@@ -18,7 +18,7 @@
                     <ul class="no-bullet dropdown-group">
                         <% data.nav_primary.nav_resources_a.each do |m| %>
                             <li class="dropdown-group--item no-wrap">
-                            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+                            <%= current_link_to m.title, m.url, title: m.desc, class: "dropdown-item--link" %>
                             </li>
                         <% end %>
                     </ul>
@@ -36,7 +36,7 @@
                     <ul class="no-bullet dropdown-group">
                         <% data.nav_primary.nav_resources_b.each do |m| %>
                             <li class="dropdown-group--item no-wrap">
-                            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+                            <%= current_link_to m.title, m.url, title: m.desc, class: "dropdown-item--link" %>
                             </li>
                         <% end %>
                     </ul>
@@ -50,7 +50,7 @@
                     <ul class="no-bullet dropdown-group">
                         <% data.nav_primary.nav_company_a.each do |m| %>
                             <li class="dropdown-group--item no-wrap">
-                            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+                            <%= current_link_to m.title, m.url, title: m.desc, class: "dropdown-item--link" %>
                             </li>
                         <% end %>
                     </ul>
@@ -58,7 +58,7 @@
                     <ul class="no-bullet dropdown-group">
                         <% data.nav_primary.nav_company_b.each do |m| %>
                             <li class="dropdown-group--item no-wrap">
-                            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+                            <%= current_link_to m.title, m.url, title: m.desc, class: "dropdown-item--link" %>
                             </li>
                         <% end %>
                     </ul>
@@ -72,7 +72,7 @@
                     <ul class="no-bullet dropdown-group">
                         <% data.nav_primary.nav_customers.each do |m| %>
                             <li class="dropdown-group--item no-wrap">
-                            <%= current_link_to m.title, m.url, title: m.desc, class: "is-current" %>
+                            <%= current_link_to m.title, m.url, title: m.desc, class: "dropdown-item--link" %>
                             </li>
                         <% end %>
                     </ul>
@@ -88,6 +88,8 @@
         <a href="/contact" id="topNavCTA" class="button <% if defined?(style) && style == "light" %>button--light<% else %> success<% end %>">Contact us</a>
     </nav>
     <div class="mobile-menu">
-        <i class="fa fa-bars"></i>
+        <!-- <span class="icon-label">menu</span> -->
+        <%= inline_svg("small/icon-menu", class: "icon-size--medium svg-color--white") %>
+        <!-- <i class="fa fa-bars"></i> -->
     </div>
 </header>
