--- a/source/pricing/growth.html.erb
+++ b/source/pricing/growth.html.erb
@@ -4,7 +4,7 @@ summary: "Request information about the Growth Plan on the Datica platform"
 author: "Datica, Inc."
 tags: "growth, developer, application, registration, signup"
 date: "January 1, 2017"
-share_image: "https://images.contentful.com/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "contact-us"
 customJS: "/public/js/form.js"
 layout: basic
