--- a/source/partials/section-promos/_recent-items.html.erb
+++ b/source/partials/section-promos/_recent-items.html.erb
@@ -1,6 +1,9 @@
-<% sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse! %>
-<% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
-<% sorted_academy = data.site.academy.to_a.sort_by{ |id, academy| academy['pub_date'] }.reverse! %>
+<%
+sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
+sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse!
+sorted_academy = data.site.academy.to_a.sort_by{ |id, academy| academy['pub_date'] }.reverse!
+sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse!
+%>
 <section class="container-gray-10 section-article">
     <h3 class="headline-3 group text-center"><strong>Recently</strong> at Datica</h3>
     <div class="row full-width align-center small-up-1 medium-up-3 large-up-3">
