--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -93,7 +93,7 @@ sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date']
 %>
 <section class="container-gray-10 section-article">
     <h3 class="headline-3 group text-center"><strong>Recently</strong> at Datica</h3>
-    <div class="row row--card-grid align-center small-up-1 medium-up-3 large-up-3">
+    <div class="row row--card-grid align-center small-up-1 medium-up-2 large-up-3 xlarge-up-3">
     <% sorted_posts.take(1).each do | id, blog_entry | %>
         <div class="column">
             <%= partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true } %>
