--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -71,12 +71,7 @@ figcaption{
 
 .image {
     // use these in conjunction with float classes, like .float-left, .float-right, .float-right-on-medium, etc.
-    &-half {
-        max-width: 50%;
-    }
-    &-third {
-        max-width: 33%;
-    }
+    @include percentage-widths;
 }
 .image-overlay { // experimental
     // opacity: 0.5;
