--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -118,11 +118,20 @@ priority: "0.9"
         <% end %>
     </div>
 </section>
+
 <section class="section-article container-image--fixed container-color--blue-bright-noise">
-    <div class="row align-center">
-        <div class="columns small-12 medium-10 large-8 text-center">
+    <div class="row align-middle align-center">
+        <div class="columns small-12 medium-7 large-6">
             <h2 class="headline-3">You wouldn't build payment processing infrastructure to charge credit cards. You'd use Stripe.</h2>
-            <h3 class="headline-4">So why waste money and take on unnecessary risk building your own compliance layer?</h3>
+            <h3 class="headline-4 group">So why waste money and take on unnecessary risk building your own compliance layer?</h3>
+            <h4 class="headline-6 spaced-out">Learn more about Datica on AWS</h4>
+            <ul class="width-two-thirds">
+                <li><a href="#" class="link--white">Shared Responsibility overview</a></li>
+                <li><a href="#" class="link--white">Explanation of what the Platform does on top of AWS</a></li>
+                <li><a href="#" class="link--white">Total Cost of Ownership guide vs. building something similar your</a>self on AWS</li>
+            </ul>
+        </div>
+        <div class="columns small-12 medium-5 large-5">
             <%= 
             partial "partials/snippets/button", 
                 :locals => {
@@ -137,17 +146,8 @@ priority: "0.9"
             %>
         </div>
     </div>
-
-    <div class="row align-center">
-        <div class="small-12 medium-8 large-6">
-            <ul>
-                <li>Shared Responsibility overview</li>
-                <li>Explanation of what the Platform does on top of AWS</li>
-                <li>Total Cost of Ownership guide vs. building something similar yourself on AWS</li>
-            </ul>
-        </div>
-    </div>
 </section>
+
 <section class="section-article">
     <div id="companies" class="row align-center">
         <div class="columns small-12 large-12 text-center">
