--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -394,3 +394,14 @@ $underline: false !default;
     &::-moz-placeholder          {@content};
     &:-ms-input-placeholder      {@content};
 }
+@mixin percentage-widths {
+    &-half {
+        max-width: 50%;
+    }
+    &-two-thirds {
+        max-width: 66%;
+    }
+    &-third {
+        max-width: 33%;
+    }
+}
