--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -121,17 +121,17 @@ priority: "0.9"
 
 <section class="section-article container-image--fixed container-color--blue-bright-noise">
     <div class="row align-middle align-center">
-        <div class="columns small-12 medium-7 large-6">
+        <div class="columns small-12 medium-6 large-6">
             <h2 class="headline-3">You wouldn't build payment processing infrastructure to charge credit cards. You'd use Stripe.</h2>
             <h3 class="headline-4 group">So why waste money and take on unnecessary risk building your own compliance layer?</h3>
             <h4 class="headline-6 spaced-out">Learn more about Datica on AWS</h4>
-            <ul class="width-two-thirds">
+            <ul class="">
                 <li><a href="#" class="link--white">Shared Responsibility overview</a></li>
                 <li><a href="#" class="link--white">Explanation of what the Platform does on top of AWS</a></li>
                 <li><a href="#" class="link--white">Total Cost of Ownership guide vs. building something similar your</a>self on AWS</li>
             </ul>
         </div>
-        <div class="columns small-12 medium-5 large-5">
+        <div class="columns small-12 medium-6 large-6">
             <%= 
             partial "partials/snippets/button", 
                 :locals => {
@@ -143,9 +143,10 @@ priority: "0.9"
                     :icon_color => "black", 
                     :icon_align => "right"
                 }
-            %>
+            %>  
         </div>
     </div>
+
 </section>
 
 <section class="section-article">
