--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -39,6 +39,36 @@ ctaCustom: true
         </div>
     </section>
 </div>
+<section class="section-article container-gray-12">
+    <% data.site.featureCategories.each do | category, id | %>
+        <div class="row">
+            <div class="columns small-12 large-6">
+                <h3 class="headline-4"><%= category["title"] %></h3>
+                <% if category.has_key?("desc") %>
+                    <p class="lead"><%= category["desc"] %></p>
+                <% end %>
+            </div>
+        </div>
+        <div class="row">
+            <div class="columns small-12 multicol-3">
+                <% if category.has_key?("related_features") %>
+                    <dl class="">
+                        <% category["related_features"].each do | feature | %>
+                            <dt><%= feature.title %></dt>
+                            <% if feature.has_key?("summary") %>
+                                <dd><%= Kramdown::Document.new(feature.summary).to_html %></dd>
+                            <% end %>
+                            <% if feature.has_key?("desc") %>
+                                <dd><%= Kramdown::Document.new(feature.desc).to_html %></dd>
+                            <% end %>
+                        <% end %>
+                <% end %>
+
+            </div>
+        </div>
+    <% end %>
+
+</section>
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 text-center group">
