--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -8,6 +8,7 @@ ogType: "article"
 share_image: "https://images.contentful.com/189dvqdsjh46/n9pqHc4Xp62uUSwciEe4C/ead1ba4e14e45c06639c5dea3d47b8ac/datica-academy-notebook-share.jpg?w=1200"
 layout: "basic"
 customCSS: "academy"
+customJS: "/public/js/academy.js"
 ---
 <%= partial "partials/snippets/header", :locals => { :style => "dark" } %>
 <section class="section-article">
@@ -41,23 +42,7 @@ customCSS: "academy"
                             </a>
                         <% end %>
                         <%= Kramdown::Document.new(guide_entry["summary"]).to_html %>
-                        
                     </div>
-                    <!-- <div class="card-divider card-divider--flush">
-                        <%#= 
-                        partial "partials/snippets/button", 
-                            :locals => {
-                                :label => "Get the Guide", 
-                                :title => "Get the Guide", 
-                                :url => "/guide/" + guide_entry.slug, 
-                                # :rel => "external", 
-                                :button_classes => "button button--primary card-button-override", 
-                                :icon => "icon-chevron-right", 
-                                :icon_color => "white", 
-                                :icon_align => "right"
-                            }
-                        %>
-                    </div>    --> 
                 </div>
             </div>
         <% end %>
@@ -74,7 +59,7 @@ customCSS: "academy"
             <h3 class="headline-5">Search the Academy</h3>
             <div id="academySearch" class="group filter-search input-nav input-nav--black">
                 <span class="input-nav--icon"><i class="fa fa-search"></i></span>
-                <input type="text" id="searchInput" onkeyup="filterList()" placeholder="Search in this list (hipaa, ehr, hitrust, etc.)">
+                <input type="search" id="searchInput" onkeyup="filterList()" placeholder="Search in this list (hipaa, ehr, hitrust, etc.)">
             </div>
         </div>
         <div class="columns small-12 medium-6">
@@ -156,110 +141,3 @@ customCSS: "academy"
         </aside>
     </div>
 </section>
-<script>
-function hideWidgets() {
-    $('.discovery-link').addClass("js-hidden");
-    $('.discovery-link').removeClass("js-visible");
-}
-function showWidget(tag) {
-    hideWidgets();
-    $('#discovery-'+tag).addClass("js-visible");
-    $('#discovery-'+tag).removeClass("js-hidden");
-}
-function filterList() {
-    // Declare variables
-    var input, filter, ul, li, a, i;
-    input = document.getElementById('searchInput');
-    filter = input.value.toLowerCase();
-    hideWidgets();
-    // map certain keywords to discovery topic slugs
-    switch (filter) {
-        case "hipaa": case "compliance":
-            showWidget("hipaa-compliance");
-            break;
-        case "cloud":
-            showWidget("healthcare-cloud");
-            break;
-        case "integration": case "integrate": case "integrat": case "ehr":
-            showWidget("ehr-integrations");
-            break;
-        case "hitrust":
-            showWidget("hitrust");
-            break;
-        // default:
-        //     hideWidgets();
-    }
-    ul = document.getElementById("articleList");
-    li = ul.getElementsByClassName('article-list--item');
-
-    // Loop through all list items, and hide those who don't match the search query
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        if (a.innerHTML.toLowerCase().indexOf(filter) > -1) {
-            li[i].style.display = "";
-            // $(li).addClass("js-visible");
-            // $(li).removeClass("js-hidden");
-        } else {
-            li[i].style.display = "none";
-            // $(li).addClass("js-hidden");
-            // $(li).removeClass("js-visible");
-        }
-    }
-}
-
-
-
-
-
-// // $("document").ready(function(){
-    
-// // }
-// filterSelection("all");
-// function filterSelection(c) {
-//     var x, i;
-//     x = document.getElementsByClassName("article-list--item");
-//     if (c == "all") c = "";
-//     for (i = 0; i < x.length; i++) {
-//         listRemoveClass(x[i], "js-visible");
-//         if (x[i].className.indexOf(c) > -1) listAddClass(x[i], "js-visible");
-//     }
-//     // console.log("filterSelection");
-// }
-
-// function listAddClass(element, name) {
-//     var i, arr1, arr2;
-//     arr1 = element.className.split(" ");
-//     arr2 = name.split(" ");
-//     for (i = 0; i < arr2.length; i++) {
-//         if (arr1.indexOf(arr2[i]) == -1) {
-//             element.className += " " + arr2[i];
-//         }
-//     }
-//     // console.log("listAddClass");
-// }
-
-// function listRemoveClass(element, name) {
-//     var i, arr1, arr2;
-//     arr1 = element.className.split(" ");
-//     arr2 = name.split(" ");
-//     for (i = 0; i < arr2.length; i++) {
-//         while (arr1.indexOf(arr2[i]) > -1) {
-//             arr1.splice(arr1.indexOf(arr2[i]), 1);
-//         }
-//     }
-//     element.className = arr1.join(" ");
-//     // console.log("listRemoveClass");
-// }
-
-// // Add active class to the current button (highlight it)
-// var btnContainer = document.getElementById("filterButtonGroup");
-// var btns = btnContainer.getElementsByClassName("js-tag");
-// for (var i = 0; i < btns.length; i++) {
-//     btns[i].addEventListener("click", function() {
-//         var current = document.getElementsByClassName("active");
-//         current[0].className = current[0].className.replace(" active", "");
-//         this.className += " active";
-//         // console.log(this);
-//     });
-// }
-</script>
