somehow renders loop now, I honestly cannot tell why

--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -63,7 +63,20 @@ priority: "0.9"
             %>
         </div>
     </div>
-
+<!--     <div class="row align-center">
+        <div class="columns small-12 large-4">
+            <hr>
+        </div>
+    </div>
+    <div class="row align-center">
+        <div class="columns small-12 large-4">
+            <p>The Datica platform enables you to focus on building and securing your app by managing all compliance and security obligations on the cloud.</p>
+            <p>This is what <strong>complete HIPAA compliance in the cloud</strong> looks like.</p>
+        </div>
+        <div class="columns small-12 large-8">
+            <img class="img-crisp" src="//images.contentful.com/189dvqdsjh46/1zXwr2EWQoMkIskG68y8Qk/9b634cd5b8a778dc4fc7ae51d6a11239/platform-overview-diagram-2x.png" alt="Compliance Overview diagram">
+        </div>
+    </div> -->
 </section>
 <section class="section-article container-color--gray-dark-grad-top-bottom-noise">
     <div class="row align-center">
