--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -83,6 +83,9 @@
         }
     }
 }
+.no-break { // keep dl list items together in cols. Might move to utils
+    @include break-inside;
+}
 
 .callout {
     // &-parent { // rare beast, that holds other callouts. Spacing adjustments
@@ -115,7 +118,7 @@
         // }
         &.is-stuck {
             // opacity: 1;
-            background-color: $gray-12;            
+            background-color: $gray-12;
             @include shadow(4px, 4px, $black, 0.85);
         }
     }
@@ -155,7 +158,7 @@
 }
 
 
-.quote-callout { 
+.quote-callout {
     color: inherit;
     opacity: 0.9;
     font: {
@@ -208,4 +211,3 @@
     //     display: block;
     // }
 }
-
